[package]
name = "type_trait"
# Keep major and minor version in sync with zvariant crate
version = "0.0.1"

description = "Type Introspection for Rust"

[[bin]]
name = "demo"
path = "bin/demo/main.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.38", features = ["extra-traits", "full"] }
quote = "1.0.3"
proc-macro-crate = "1.0.0"
