[package]
name = "type_trait_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.38", features = ["extra-traits", "full"] }
quote = "1.0.3"
proc-macro-crate = "1.0.0"
